--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,6 +6,9 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.0'
+
+        // Google Services plugin
+        classpath 'com.google.gms:google-services:4.3.8'
     }
 }
 
