Save new location logic implemented using BLoC pattern

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,6 +41,9 @@ android {
         targetSdkVersion 30
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+
+        // Enabling multi dex support.
+        multiDexEnabled true
     }
 
     buildTypes {
