--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Custom packages
   google_maps_flutter: ^2.0.6
   cloud_firestore: ^2.2.1
+  geolocator: ^7.0.3
+  http: ^0.13.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
