--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cloud_firestore: ^2.2.1
   geolocator: ^7.0.3
   http: ^0.13.1
+  fluttertoast: ^8.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
